--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-blog",
+  "name": "arblog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.5.3",
+    "axios": "^1.7.7",
+    "cookie": "^0.7.2",
+    "dotenv": "^16.4.5",
+    "geoip-lite": "^1.4.10",
+    "jose": "^5.9.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
+    "next": "14.2.14",
+    "next-auth": "^4.24.8",
+    "parser": "^0.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
+    "react-markdown-editor-lite": "^1.3.4",
+    "ua-parser-js": "^1.0.39",
+    "useragent": "^2.3.0"
   },
   "devDependencies": {
     "postcss": "^8",
